--- a/style.css
+++ b/style.css
@@ -4,4 +4,16 @@
   box-sizing: border-box;
 }
 body{
+  background-color: #7e9;
+}
+h1{
+  font-family: Impact;
+  color: #Af3;
+}
+h2{
+  color: #fec;
+  font-family: Cooper;
+}
+li{
+  background-color: #249900;
 }
